--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "node-sass": "^4.8.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -41,6 +42,10 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "resolve": "1.6.0",
+    "sass": "^1.1.1",
+    "sass-loader": "^6.0.7",
+    "scss": "^0.2.4",
+    "scss-loader": "0.0.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
