--- a/package.json
+++ b/package.json
@@ -27,19 +27,25 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "marked": "^0.3.19",
     "node-sass": "^4.8.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
+    "rc-queue-anim": "^1.5.0",
     "react": "^16.3.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
+    "react-remarkable": "^1.1.3",
     "react-router": "^3.0.0",
+    "react-router-transition": "^1.2.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "resolve": "1.6.0",
