--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router": "^3.0.0",
     "react-router-transition": "^1.2.1",
     "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "resolve": "1.6.0",
     "sass": "^1.1.1",
