--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "concurrently": "^4.0.1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "echarts": "^4.0.4",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -24,13 +24,16 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "koa": "^2.5.2",
     "marked": "^0.3.19",
+    "mongoose": "^5.2.10",
     "node-sass": "^4.8.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -46,6 +49,7 @@
     "react-remarkable": "^1.1.3",
     "react-router": "^3.0.0",
     "react-router-transition": "^1.2.1",
+    "react-saga": "^0.2.6",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
@@ -65,6 +69,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "server": "node src/server/server.js",
+    "dev": "concurrently \"npm run start\" \"npm run server\"",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
