--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
+    "body-parser": "^1.18.3",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "concurrently": "^4.0.1",
+    "cookie-parser": "^1.4.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -69,7 +71,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "server": "node src/server/server.js",
+    "server": "nodemon src/server/server.js",
     "dev": "concurrently \"npm run start\" \"npm run server\"",
     "test": "node scripts/test.js --env=jsdom"
   },
@@ -109,5 +111,9 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
+  },
+  "proxy": "http://localhost:3333"
 }
