--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -115,5 +116,5 @@
   "devDependencies": {
     "nodemon": "^1.18.4"
   },
-  "proxy": "http://localhost:3333"
+  "proxy": "http://47.98.177.236:3333"
 }
