--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "concurrently": "^4.0.1",
     "mockjs": "^1.0.1-beta3",
     "nodemon": "^1.18.4"
   },
