--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router": "^3.0.0",
     "react-router-transition": "^1.2.1",
     "react-saga": "^0.2.6",
+    "react-transition-group": "^2.4.0",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
