--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jquery": "^3.3.1",
     "koa": "^2.5.2",
     "marked": "^0.3.19",
     "mongoose": "^5.2.13",
