--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-remarkable": "^1.1.3",
-    "react-router": "^3.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-router-transition": "^1.2.1",
     "react-saga": "^0.2.6",
     "react-transition-group": "^2.4.0",
