--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,11 @@
     "react-app"
   ],
   "plugins": [
-    "transform-decorators-legacy"
+    "transform-decorators-legacy",
+    ["import", {
+      "libraryName": "antd",
+      "libraryDirectory": "es",
+      "style": "css" 
+    }]
   ]
 }
