--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
+    "babel-plugin-import": "^1.11.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
@@ -46,10 +47,10 @@
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "rc-queue-anim": "^1.5.0",
-    "react": "^16.3.1",
+    "react": "^16.4.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-remarkable": "^1.1.3",
     "react-router": "^4.3.1",
@@ -65,6 +66,7 @@
     "sass-loader": "^6.0.7",
     "scss": "^0.2.4",
     "scss-loader": "0.0.1",
+    "simple-modal-react": "^1.0.9",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
