--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "koa": "^2.5.2",
     "marked": "^0.3.19",
     "mongoose": "^5.2.13",
+    "multer": "^1.4.1",
     "node-sass": "^4.8.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
